--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         }
     },
     "scripts": {
+
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
@@ -46,7 +47,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],  "test-all": [
+            "@php artisan dusk",
+           "@php artisan test"
+       ]
     },
     "extra": {
         "branch-alias": {
