--- a/.env
+++ b/.env
@@ -9,12 +9,20 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Base de datos específica para Dusk
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=Lara_dusk
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=Lara_dusk
+DB_DATABASE=Lara_testing
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
+
 
 # Configuración de sesión y caché para pruebas rápidas
 BROADCAST_DRIVER=log
